<resources>
    <string name="app_name">Ordlek</string>
    <string name="overskrift">Lag ord</string>
    <string name="buttonMain">K</string>
    <string name="button1">R</string>
    <string name="button2">D</string>
    <string name="button3">V</string>
    <string name="button4">Y</string>
    <string name="button5">O</string>
    <string name="button6">U</string>
    <string name="buttonDelete">Slett</string>
    <string name="buttonCheck">Sjekk</string>
    <string name="buttonHint">Hint</string>
    <string name="answ">Fasit</string>
    <string name="feilMeldKort">Ordet er for kort</string>
    <string name="feilMeldMain">Må inneholde bokstav i midten</string>
    <string name="feilOrd">Ikke gyldig ord</string>
    <string name="riktig">Riktig!</string>
    <string name="found">Funnet</string>
    <string name="back">Tilbake</string>
</resources>